--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -7,7 +7,7 @@
 
   <parent>
     <groupId>cloud.xcan.comp.jmock</groupId>
-    <artifactId>xcan-jmock</artifactId>
+    <artifactId>JMock</artifactId>
     <version>1.0.0</version>
   </parent>
 
@@ -18,7 +18,7 @@
   <dependencies>
     <dependency>
       <groupId>cloud.xcan.comp.jmock</groupId>
-      <artifactId>xcan-jmock.core</artifactId>
+      <artifactId>core</artifactId>
       <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
