--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -7,11 +7,11 @@
 
   <parent>
     <groupId>cloud.xcan.comp.jmock</groupId>
-    <artifactId>xcan-jmock</artifactId>
+    <artifactId>JMock</artifactId>
     <version>1.0.0</version>
   </parent>
 
-  <artifactId>xcan-jmock.plugins</artifactId>
+  <artifactId>plugins</artifactId>
   <name>JMock :: Plugins</name>
   <packaging>pom</packaging>
 
