--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,11 +7,11 @@
 
   <parent>
     <groupId>cloud.xcan.comp.jmock</groupId>
-    <artifactId>xcan-jmock</artifactId>
+    <artifactId>JMock</artifactId>
     <version>1.0.0</version>
   </parent>
 
-  <artifactId>xcan-jmock.core</artifactId>
+  <artifactId>core</artifactId>
   <name>JMock :: Core</name>
   <packaging>jar</packaging>
 
@@ -19,7 +19,7 @@
 
     <dependency>
       <groupId>cloud.xcan.comp.jmock</groupId>
-      <artifactId>xcan-jmock.api</artifactId>
+      <artifactId>api</artifactId>
       <version>${project.version}</version>
     </dependency>
 
