--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -11,7 +11,7 @@
     <version>1.0.0</version>
   </parent>
 
-  <artifactId>benchmark</artifactId>
+  <artifactId>xcan-jmock.benchmark</artifactId>
   <name>JMock :: Micro Benchmark</name>
   <packaging>jar</packaging>
 
