--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,7 +11,7 @@
     <version>1.0.0</version>
   </parent>
 
-  <artifactId>core</artifactId>
+  <artifactId>xcan-jmock.core</artifactId>
   <name>JMock :: Core</name>
   <packaging>jar</packaging>
 
