--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cloud.xcan.comp.jmock</groupId>
+    <groupId>cloud.xcan.jmock</groupId>
     <artifactId>JMock</artifactId>
     <version>1.0.0</version>
     <relativePath>../pom.xml</relativePath>
