--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cloud.xcan.comp.jmock</groupId>
+    <groupId>cloud.xcan.jmock</groupId>
     <artifactId>JMock</artifactId>
     <version>1.0.0</version>
   </parent>
@@ -19,21 +19,21 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>cloud.xcan.comp.jmock</groupId>
+        <groupId>cloud.xcan.jmock</groupId>
         <artifactId>xcan-jmock.api</artifactId>
         <version>${project.version}</version>
         <scope>compile</scope>
       </dependency>
 
       <dependency>
-        <groupId>cloud.xcan.comp.jmock</groupId>
+        <groupId>cloud.xcan.jmock</groupId>
         <artifactId>xcan-jmock.core</artifactId>
         <version>${project.version}</version>
         <scope>compile</scope>
       </dependency>
 
       <dependency>
-        <groupId>cloud.xcan.comp.jmock</groupId>
+        <groupId>cloud.xcan.jmock</groupId>
         <artifactId>xcan-jmock.plugins</artifactId>
         <version>${project.version}</version>
         <scope>compile</scope>
