--- a/plugins/car/pom.xml
+++ b/plugins/car/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cloud.xcan.comp.jmock</groupId>
+    <groupId>cloud.xcan.jmock</groupId>
     <artifactId>xcan-jmock.plugins</artifactId>
     <version>1.0.0</version>
   </parent>
