--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -6,7 +6,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>cloud.xcan.comp.jmock</groupId>
+    <groupId>cloud.xcan.jmock</groupId>
     <artifactId>JMock</artifactId>
     <version>1.0.0</version>
   </parent>
@@ -24,7 +24,7 @@
     <module>financial</module>
     <module>math</module>
     <module>news</module>
-<!--    <module>web</module>-->
+    <!--    <module>web</module>-->
   </modules>
 
   <dependencies>
