--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -11,7 +11,7 @@
     <version>1.0.0</version>
   </parent>
 
-  <artifactId>bom</artifactId>
+  <artifactId>xcan-jmock.bom</artifactId>
   <name>JMock :: BOM</name>
   <packaging>pom</packaging>
   <description>Bill of Materials for jmock</description>
