--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 
   <developers>
     <developer>
-      <id>xiaolong.liu</id>
+      <id>XiaoLong Liu</id>
       <name>XiaoLong Liu</name>
       <email>lxl@xcan.cloud</email>
       <organization>XCan Company</organization>
