Update organization name

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <url>https://github.com/xcancloud/xcan-jmock</url>
 
   <organization>
-    <name>XCan Company</name>
+    <name>XCan Cloud</name>
     <url>http://www.xcan.cloud</url>
   </organization>
 
