--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
   <scm>
     <url>scm:git:https://github.com/xcancloud/JMock</url>
-    <connection>scm:git:git@gitlab.xcan.work/xcan-framework/JMock.git</connection>
+    <connection>scm:git:git@github.com/xcancloud/JMock.git</connection>
     <developerConnection>scm:git:https://github.com/xcancloud/JMock.git
     </developerConnection>
     <tag>${project.version}</tag>
