--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -22,6 +22,7 @@
     <module>crypto</module>
     <module>financial</module>
     <module>compute</module>
+    <module>all</module>
   </modules>
 
   <dependencies>
