--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 
   <licenses>
     <license>
-      <name>GPLv3</name>
-      <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
+      <name>Apache-2.0 license</name>
+      <url>http://www.apache.org/licenses/</url>
     </license>
   </licenses>
 
